<resources>
    <string name="app_name">SwipePicker</string>
    <string name="app_description">
        This widget allows the user to enter different values, such as:
        time, date, number, without additional dialog windows using the swipe gestures.
    </string>

    <string name="number">Number</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="time">Time</string>

    <string name="autumn">autumn</string>
    <string name="winter">winter</string>
    <string name="spring">spring</string>
    <string name="summer">summer</string>

    <string name="dawn">dawn</string>
    <string name="sunset">sunset</string>
    <string name="night">night</string>

    <string name="incorrect_input">Incorrect input!</string>
</resources>
