<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/content_padding"
    tools:context=".MainActivity">

    <one.xcorp.widget.swipepicker.SwipePicker
        android:id="@+id/number"
        style="@style/SwipePicker.Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:state_activated="true"
        app:allowDeactivate="false"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toTopOf="parent"
        app:looped="false"
        app:manualInput="false"
        app:value="5" />

    <one.xcorp.widget.swipepicker.SwipePicker
        android:id="@+id/scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:state_activated="true"
        app:allowDeactivate="false"
        app:allowFling="false"
        app:backgroundInput="@drawable/scale_background"
        app:hoverViewStyle="@style/SwipePicker.HoverViewScale"
        app:layout_constraintEnd_toEndOf="@+id/year"
        app:layout_constraintTop_toTopOf="@+id/number"
        app:maxValue="110"
        app:minValue="-10"
        app:scale="@array/scale"
        app:step="3.3"
        app:sticky="true"
        app:value="1.3" />

    <one.xcorp.widget.swipepicker.SwipePicker
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/content_padding"
        android:layout_marginRight="@dimen/content_padding"
        android:hint="@string/day"
        android:maxLength="2"
        app:layout_constraintEnd_toStartOf="@+id/month"
        app:layout_constraintTop_toTopOf="@+id/month"
        app:maxValue="31"
        app:minValue="1" />

    <one.xcorp.widget.swipepicker.SwipePicker
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_padding"
        android:hint="@string/month"
        android:inputType="textNoSuggestions"
        android:maxLength="4"
        app:hoverViewStyle="@style/SwipePicker.HoverViewWide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number"
        app:maxValue="12"
        app:minValue="1">

        <TextView
            android:id="@+id/monthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:visibility="invisible"
            tools:text="@string/autumn" />
    </one.xcorp.widget.swipepicker.SwipePicker>

    <one.xcorp.widget.swipepicker.SwipePicker
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_padding"
        android:layout_marginStart="@dimen/content_padding"
        android:hint="@string/year"
        android:maxLength="4"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toTopOf="@+id/month"
        app:maxValue="2100"
        app:minValue="1900"
        app:value="1970" />

    <one.xcorp.widget.swipepicker.SwipePicker
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_padding"
        android:hint="@string/time"
        android:inputType="time"
        android:state_activated="true"
        app:anchor="0"
        app:layout_constraintEnd_toEndOf="@+id/year"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/month"
        app:maxValue="86400000"
        app:minValue="0"
        app:step="900000"
        app:value="0">

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            tools:text="@string/sunset" />
    </one.xcorp.widget.swipepicker.SwipePicker>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/text_line_spacing"
        android:text="@string/app_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time"
        app:layout_constraintVertical_bias="0.3" />
</android.support.constraint.ConstraintLayout>
